--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Function Slot</title>
+
+  <!-- css -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+    <div class="question">
+      <p>機能をいくつ実装しますか</p>
+      <!-- for文にしたい -->
+      <select name="number" id="function_number">
+        <option value="1">1</option>
+        <option value="2">2</option>
+      </select><!-- /# -->
+        <button class="start-btn">START</button>
+        <button class="stop-btn">STOP</button>
+      
+    </div>
+    <div class="slots">
+      <div class="slot" id="slot">
+        <p>機能名</p>
+      </div>
+      <div class="slot" id="slot">
+        <p>機能名</p>
+      </div>
+    </div>
 </body>
 </html>
