--- a/index.html
+++ b/index.html
@@ -10,24 +10,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="question">
-      <p>機能をいくつ実装しますか</p>
-      <!-- for文にしたい -->
-      <select name="number" id="function_number">
-        <option value="1">1</option>
-        <option value="2">2</option>
+  <div class="question">
+    <p>機能をいくつ実装しますか</p>
+      <select name="number" id="appFunctionNumber">
       </select><!-- /# -->
-        <button class="start-btn">START</button>
-        <button class="stop-btn">STOP</button>
-      
+      <button class="start-btn">START</button>
+      <button class="stop-btn">STOP</button>
+    
+  </div>
+  <div class="slots">
+    <div class="slot" id="slot">
+      <p>機能名</p>
     </div>
-    <div class="slots">
-      <div class="slot" id="slot">
-        <p>機能名</p>
-      </div>
-      <div class="slot" id="slot">
-        <p>機能名</p>
-      </div>
+    <div class="slot" id="slot">
+      <p>機能名</p>
     </div>
+  </div>
+  <script src="index.js"></script>
 </body>
 </html>
